@@ -17,16 +17,7 @@
 
 	<properties>
 		<problem-spring-web.version>0.26.2</problem-spring-web.version>
-
-		<project.testresult.directory>${project.build.directory}/test-results</project.testresult.directory>
-		<jacoco-maven-plugin.version>0.8.7</jacoco-maven-plugin.version>
-		<jacoco.minimum.coverage>0.80</jacoco.minimum.coverage>
-		<jacoco.utReportFolder>${project.build.directory}/jacoco/test</jacoco.utReportFolder>
-		<jacoco.utReportFile>${jacoco.utReportFolder}/test.exec</jacoco.utReportFile>
-		<jacoco.itReportFolder>${project.build.directory}/jacoco/integrationTest</jacoco.itReportFolder>
-		<jacoco.itReportFile>${jacoco.itReportFolder}/integrationTest.exec</jacoco.itReportFile>
-		<junit.utReportFolder>${project.testresult.directory}/test</junit.utReportFolder>
-		<junit.itReportFolder>${project.testresult.directory}/integrationTest</junit.itReportFolder>
+		<openapi.version>1.5.9</openapi.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +50,23 @@
 			<artifactId>problem-spring-webflux</artifactId>
 			<version>${problem-spring-web.version}</version>
 		</dependency>
+
+		<dependency>
+		    <groupId>org.mongodb</groupId>
+		    <artifactId>mongodb-driver-sync</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-webflux-ui</artifactId>
+			<version>${openapi.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-data-rest</artifactId>
+			<version>${openapi.version}</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -132,143 +140,7 @@
 					<compilerArgs>--enable-preview</compilerArgs>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-					<runOrder>alphabetical</runOrder>
-					<argLine>--enable-preview</argLine>
-					<reportsDirectory>${junit.utReportFolder}</reportsDirectory>
-					<excludes>
-						<exclude>**/*IT*</exclude>
-						<exclude>**/*IntTest*</exclude>
-						<exclude>**/*IntegrationTest*</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<configuration>
-					<classesDirectory>${project.build.outputDirectory}</classesDirectory>
-					<runOrder>alphabetical</runOrder>
-					<argLine>--enable-preview</argLine>
-					<reportsDirectory>${junit.itReportFolder}</reportsDirectory>
-					<includes>
-						<include>**/*IT*</include>
-						<include>**/*IntTest*</include>
-						<include>**/*IntegrationTest*</include>
-					</includes>
-				</configuration>
-				<executions>
-					<execution>
-						<id>integration-test</id>
-						<goals>
-							<goal>integration-test</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>verify</id>
-						<goals>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>com.coveo</groupId>
-				<artifactId>fmt-maven-plugin</artifactId>
-				<version>2.10</version>
-				<configuration>
-					<verbose>true</verbose>
-					<filesNamePattern>.*\.java</filesNamePattern>
-					<skip>false</skip>
-					<skipSortingImports>false</skipSortingImports>
-					<style>google</style>
-				</configuration>
-				<executions>
-					<execution>
-						<goals>
-							<goal>format</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>${jacoco-maven-plugin.version}</version>
-				<configuration>
-					<dataFile>${project.build.directory}/jacoco/test/jacoco.exec</dataFile>
-					<rules>
-						<rule>
-							<element>BUNDLE</element>
-							<limits>
-								<limit>
-									<counter>COMPLEXITY</counter>
-									<value>COVEREDRATIO</value>
-									<minimum>${jacoco.minimum.coverage}</minimum>
-								</limit>
-							</limits>
-						</rule>
-					</rules>
-					<excludes>
-						<exclude>**/*Application.*</exclude>
-						<exclude>**/config/**</exclude>
-						<exclude>**/models/*</exclude>
-						<exclude>**/dtos/*</exclude>
-						<exclude>**/exceptions/*</exclude>
-						<exclude>**/*Constants*</exclude>
-					</excludes>
-				</configuration>
-				<executions>
-					<execution>
-						<id>pre-unit-tests</id>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-						<configuration>
-							<!-- Sets the path to the file which contains the execution data. -->
-							<destFile>${jacoco.utReportFile}</destFile>
-						</configuration>
-					</execution>
-					<!-- Ensures that the code coverage report for unit tests is created after unit tests have been run -->
-					<execution>
-						<id>post-unit-test</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-						<configuration>
-							<dataFile>${jacoco.utReportFile}</dataFile>
-							<outputDirectory>${jacoco.utReportFolder}</outputDirectory>
-						</configuration>
-					</execution>
-					<execution>
-						<id>pre-integration-tests</id>
-						<goals>
-							<goal>prepare-agent-integration</goal>
-						</goals>
-						<configuration>
-							<!-- Sets the path to the file which contains the execution data. -->
-							<destFile>${jacoco.itReportFile}</destFile>
-						</configuration>
-					</execution>
-					<!-- Ensures that the code coverage report for integration tests is created after integration tests have been run -->
-					<execution>
-						<id>post-integration-tests</id>
-						<phase>post-integration-test</phase>
-						<goals>
-							<goal>report-integration</goal>
-						</goals>
-						<configuration>
-							<dataFile>${jacoco.itReportFile}</dataFile>
-							<outputDirectory>${jacoco.itReportFolder}</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-        </plugins>
+		</plugins>
 	</build>
 
 </project>
